fixed gap around nav bar

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,6 @@
 #header {
     list-style-type: none;
-    margin: 0;
+    margin: -10px;
     padding: 0;
     overflow: hidden;
     background-color: #333;
@@ -41,7 +41,7 @@
 .sub-header {
   padding: 0;
   position: absolute;
-  top: 55px;
+  top: 45px;
   width: 150px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
